verseghy-website/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: verseghy/website_frontend
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 300
            failureThreshold: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            timeoutSeconds: 15
          resources:
            limits:
              memory: 1Gi
